add unbound and remove named

--- a/etc/defaults/rc.conf
+++ b/etc/defaults/rc.conf
@@ -116,6 +116,7 @@ dhcp6c_config="/etc/dhcp6c.conf"	# Path to dhcp6c configuration
 dhcp6c_interfaces=""		# Set it to the network interface(s) 
 				# where dhcp6c should work on.
 dhcp6c_flags=""			# Extra flags to pass to dhcp6c
+netif_ipexpand_max="2048"	# Maximum number of IP addrs in a range spec.
 wpa_supplicant_program="/usr/sbin/wpa_supplicant"
 wpa_supplicant_flags="-s"	# Extra flags to pass to wpa_supplicant
 wpa_supplicant_conf_file="/etc/wpa_supplicant.conf"
@@ -271,25 +272,10 @@ iscsictl_flags="-Aa"		# Optional flags to iscsictl.
 hastd_enable="NO"		# Run the HAST daemon (YES/NO).
 hastd_program="/sbin/hastd"	# path to hastd, if you want a different one.
 hastd_flags=""			# Optional flags to hastd.
+ctld_enable="NO"		# CAM Target Layer / iSCSI target daemon.
+local_unbound_enable="NO"	# local caching resolver
 mdnsd_enable="NO"		# Run mdnsd, multicast DNS (or NO).
 mdnsresponder_enable="NO"	# Run mdnsresponder (or NO).
-#
-# named.  It may be possible to run named in a sandbox, man security for
-# details.
-#
-named_enable="NO"		# Run named, the DNS server (or NO).
-named_program="/usr/sbin/named" # Path to named, if you want a different one.
-named_conf="/etc/namedb/named.conf" 	# Path to the configuration file
-#named_flags=""			# Use this for flags OTHER than -u and -c
-named_uid="bind" 		# User to run named as
-named_chrootdir="/var/named"	# Chroot directory (or "" not to auto-chroot it)
-named_chroot_autoupdate="YES"	# Automatically install/update chrooted
-				# components of named. See /etc/rc.d/named.
-named_symlink_enable="YES"	# Symlink the chrooted pid file
-named_wait="NO" 		# Wait for working name service before exiting
-named_wait_host="localhost" 	# Hostname to check if named_wait is enabled
-named_auto_forward="NO" 	# Set up forwarders from /etc/resolv.conf
-named_auto_forward_only="NO" 	# Do "forward only" instead of "forward first"
 
 #
 # kerberos. Do not run the admin daemons on slave servers
