--- a/.gitattributes
+++ b/.gitattributes
@@ -56478,6 +56478,22 @@ share/examples/sunrpc/sort/Makefile -text
 share/examples/sunrpc/sort/rsort.c -text
 share/examples/sunrpc/sort/sort.x -text
 share/examples/sunrpc/sort/sort_proc.c -text
+share/examples/tests/Makefile svneol=native#text/plain
+share/examples/tests/README -text
+share/examples/tests/tests/Makefile svneol=native#text/plain
+share/examples/tests/tests/atf/Kyuafile -text
+share/examples/tests/tests/atf/Makefile svneol=native#text/plain
+share/examples/tests/tests/atf/cp_test.sh svneol=native#text/plain
+share/examples/tests/tests/atf/printf_test.c svneol=native#text/plain
+share/examples/tests/tests/plain/Kyuafile -text
+share/examples/tests/tests/plain/Makefile svneol=native#text/plain
+share/examples/tests/tests/plain/cp_test.sh svneol=native#text/plain
+share/examples/tests/tests/plain/printf_test.c svneol=native#text/plain
+share/examples/tests/tests/tap/Kyuafile -text
+share/examples/tests/tests/tap/Makefile svneol=native#text/plain
+share/examples/tests/tests/tap/Makefile.depend svneol=native#text/plain
+share/examples/tests/tests/tap/cp_test.sh svneol=native#text/plain
+share/examples/tests/tests/tap/printf_test.c svneol=native#text/plain
 share/examples/uefisign/uefikeys -text
 share/examples/witness/lockgraphs.sh -text
 share/i18n/Makefile -text
