--- a/share/examples/scsi_target/Makefile
+++ b/share/examples/scsi_target/Makefile
@@ -1,4 +1,5 @@
-# $FreeBSD: src/share/examples/scsi_target/Makefile,v 1.5 2004/02/04 10:15:26 ru Exp $
+# $MidnightBSD$
+# $FreeBSD: stable/10/share/examples/scsi_target/Makefile 125429 2004-02-04 10:15:26Z ru $
 
 PROG=	scsi_target
 SRCS=	scsi_target.h scsi_target.c scsi_cmds.c
