--- a/share/examples/ppp/ppp.conf.sample
+++ b/share/examples/ppp/ppp.conf.sample
@@ -4,8 +4,8 @@
 #
 #           Originally written by Toshiharu OHNO
 #
-# $FreeBSD: src/share/examples/ppp/ppp.conf.sample,v 1.35 2004/12/13 17:54:30 brian Exp $
-#
+# $FreeBSD: stable/10/share/examples/ppp/ppp.conf.sample 331513 2018-03-25 01:24:02Z sevan $
+# $MidnightBSD$
 #################################################################
 
 # This file is separated into sections.  Each section is named with
@@ -29,7 +29,7 @@
 #
 default:
  set log Phase Chat LCP IPCP CCP tun command
- set device /dev/cuad1
+ set device /dev/cuau1
  set speed 115200
  set dial "ABORT BUSY ABORT NO\\sCARRIER TIMEOUT 5 \"\" AT \
            OK-AT-OK ATE1Q0 OK \\dATDT\\T TIMEOUT 40 CONNECT"
@@ -145,7 +145,7 @@ TA:
  set timeout 60 300	# The minimum charge period is 5 minutes, so don't
 			# hangup before then
 
- set device /dev/cuad0	# Or whatever
+ set device /dev/cuau0	# Or whatever
  set speed 115200	# Use as high a speed as possible
 
  enable dns		# Ask the peer what to put in resolv.conf
@@ -315,7 +315,7 @@ dodgy:
 dodgynet:
     set log Phase                               # Log link uptime
     allow mode auto                             # For autoconnect only
-    set device /dev/cuad1                       # Define modem device and speed
+    set device /dev/cuau1                       # Define modem device and speed
     set speed 115200
     deny lqr                                    # Don't support LQR
     set phone 0W1194                            # Remote system phone number,
@@ -472,7 +472,7 @@ radius-server:
 #
 direct-client:
  set dial
- set device /dev/cuad0
+ set device /dev/cuau0
  set sp 115200
  set timeout 900
  set lqrperiod 10
@@ -523,7 +523,7 @@ compuserve:
 #  such as `rlogin' is involved, you may need to ``set escape 0xff''
 #
 tcp-client:
- set device tcpsrv.mynet:1234
+ set device tcpsrv.mynet:6671
  set dial
  set login
  set ifaddr 10.0.5.1 10.0.4.1 255.255.255.0
@@ -538,10 +538,10 @@ tcp-server:
 #
 # and this in /etc/services:
 #
-#    ppp 6671/tcp
+#    ppp 6671/udp
 #
 udp-client:
- set device udpsrv.mynet:1234/udp
+ set device udpsrv.mynet:6671/udp
  set dial
  set login
  set ifaddr 10.0.5.1 10.0.4.1 255.255.255.0
@@ -651,7 +651,7 @@ callback-server:
  set cbcp
  set log +cbcp
  set redial 3 1
- set device /dev/cuad0
+ set device /dev/cuau0
  set speed 115200
  set dial "TIMEOUT 10 \"\" AT OK-AT-OK ATDT\\T CONNECT"
 
@@ -672,15 +672,13 @@ callback-server-client-decides:
 #  It's worth increasing your MTU and MRU slightly in multi-link mode to
 #  prevent full packets from being fragmented.
 #
-#  See ppp.conf.isdn for an example of how to do multi-link isdn.
-#
 #  You can now ``dial'' specific links, or even dial all links at the
 #  same time.  The `dial' command may also be prefixed with a specific
 #  link that should do the dialing.
 #
 mloop:
  load loop
- set device /dev/cuad0 /dev/cuad1 /dev/cuad2   # Use any of these devices
+ set device /dev/cuau0 /dev/cuau1 /dev/cuau2   # Use any of these devices
  set mode interactive
  set mrru 1500
  set mru 1504                                  # Room for the MP header
