--- a/share/examples/pf/pf.conf
+++ b/share/examples/pf/pf.conf
@@ -1,4 +1,4 @@
-#	$MidnightBSD$
+# $MidnightBSD$
 #	$OpenBSD: pf.conf,v 1.34 2007/02/24 19:30:59 millert Exp $
 #
 # See pf.conf(5) and /usr/share/examples/pf for syntax and examples.
@@ -16,7 +16,7 @@
 
 #nat-anchor "ftp-proxy/*"
 #rdr-anchor "ftp-proxy/*"
-#nat on $ext_if from !($ext_if) -> ($ext_if:0)
+#nat on $ext_if inet from !($ext_if) -> ($ext_if:0)
 #rdr pass on $int_if proto tcp to port ftp -> 127.0.0.1 port 8021
 #no rdr on $ext_if proto tcp from <spamd-white> to any port smtp
 #rdr pass on $ext_if proto tcp from any to any port smtp \
