--- a/share/examples/libvgl/Makefile
+++ b/share/examples/libvgl/Makefile
@@ -1,7 +1,8 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/share/examples/libvgl/Makefile 276486 2014-12-31 23:25:37Z ngie $
 
 PROG=	demo
-NO_MAN=
+MAN=
 DPADD=	${LIBVGL}
 LDADD=	-lvgl
 
