--- a/share/examples/find_interface/Makefile
+++ b/share/examples/find_interface/Makefile
@@ -1,6 +1,7 @@
-# $FreeBSD: src/share/examples/find_interface/Makefile,v 1.5 2004/12/21 08:47:09 ru Exp $
+# $MidnightBSD$
+# $FreeBSD: stable/10/share/examples/find_interface/Makefile 276486 2014-12-31 23:25:37Z ngie $
 
 PROG=	find_interface
-NO_MAN=
+MAN=
 
 .include <bsd.prog.mk>
