add config script

--- a/.gitattributes
+++ b/.gitattributes
@@ -54707,6 +54707,7 @@ release/fstab -text
 release/generate-release.sh -text
 release/i386/boot_crunch.conf -text
 release/i386/fixit_crunch.conf -text
+release/i386/i386.conf svneol=native#text/plain
 release/i386/make-memstick.sh -text
 release/i386/mkisoimages.sh -text
 release/picobsd/tinyware/simple_httpd/Makefile -text
