add some scripts

--- a/.gitattributes
+++ b/.gitattributes
@@ -54719,7 +54719,10 @@ release/picobsd/tinyware/view/fbsd.png -text svneol=unset#unset
 release/picobsd/tinyware/view/picobsd.vu -text
 release/picobsd/tinyware/view/view.c -text
 release/rc.local -text
+release/scripts/atlas-upload.sh svneol=native#text/plain
+release/scripts/box.ovf -text svneol=unset#application/xml
 release/scripts/make-manifest.sh -text
+release/scripts/mk-vmimage.sh svneol=native#text/plain
 release/scripts/mm-mtree.sh -text
 rescue/Makefile -text
 rescue/README -text
