--- a/release/picobsd/tinyware/view/Makefile
+++ b/release/picobsd/tinyware/view/Makefile
@@ -1,9 +1,10 @@
-# $FreeBSD: src/release/picobsd/tinyware/view/Makefile,v 1.5 2004/12/21 08:47:06 ru Exp $
+# $MidnightBSD$
+# $FreeBSD: stable/10/release/picobsd/tinyware/view/Makefile 276486 2014-12-31 23:25:37Z ngie $
 
 PROG=view
 SRCS=view.c
 CFLAGS+=-I/usr/local/include
 LDADD+=-L/usr/local/lib -lpng -lvgl -lz -lm
-NO_MAN=
+MAN=
 
 .include <bsd.prog.mk>
