--- a/release/Makefile
+++ b/release/Makefile
@@ -1,165 +1,355 @@
 # $MidnightBSD$
 #
 # Makefile for building releases and release media.
-# 
+#
 # User-driven targets:
-#  cdrom: Builds release CD-ROM media (release.iso)
-#  memstick: Builds memory stick image (memstick)
+#  cdrom: Builds release CD-ROM media (disc1.iso)
+#  dvdrom: Builds release DVD-ROM media (dvd1.iso)
+#  memstick: Builds memory stick image (memstick.img)
+#  mini-memstick: Builds minimal memory stick image (mini-memstick.img)
 #  ftp: Sets up FTP distribution area (ftp)
-#  release: Build all media and FTP distribution area
-#  install: Copies all release media into ${DESTDIR}
+#  release: Invokes real-release, vm-release, and cloudware-release targets
+#  real-release: Build all media and FTP distribution area
+#  vm-release: Build all virtual machine image targets
+#  cloudware-release: Build all cloud hosting provider targets
+#  install: Invokes the release-install and vm-install targets
+#  release-install: Copies all release installation media into ${DESTDIR}
+#  vm-install: Copies all virtual machine images into ${DESTDIR}
 #
 # Variables affecting the build process:
 #  WORLDDIR: location of src tree -- must have built world and default kernel
-#            (by default, the directory above this one) 
+#            (by default, the directory above this one)
 #  PORTSDIR: location of mports tree to distribute (default: /usr/mports)
+#  DOCDIR:   location of doc tree (default: /usr/doc)
+#  XTRADIR:  xtra-bits-dir argument for <arch>/mkisoimages.sh
+#  NOPKG:    if set, do not distribute third-party packages
 #  NOPORTS:  if set, do not distribute mports tree
 #  NOSRC:    if set, do not distribute source tree
-#  TARGET/TARGET_ARCH: architecture of built release 
+#  NODOC:    if set, do not generate release documentation
+#  WITH_DVD: if set, generate dvd1.iso
+#  WITH_COMPRESSED_IMAGES: if set, compress installation images with xz(1)
+#		(uncompressed images are not removed)
+#  WITH_VMIMAGES: if set, build virtual machine images with the release
+#  WITH_COMPRESSED_VMIMAGES: if set, compress virtual machine disk images
+#  		with xz(1) (extremely time consuming)
+#  WITH_CLOUDWARE: if set, build cloud hosting disk images with the release
+#  TARGET/TARGET_ARCH: architecture of built release
+#
 
-WORLDDIR?=	/usr/src
+WORLDDIR?=	${.CURDIR}/..
 PORTSDIR?=	/usr/mports
+DOCDIR?=	/usr/doc
+RELNOTES_LANG?= en_US.ISO8859-1
 
-TARGET?=	${MACHINE}
+.if !defined(TARGET) || empty(TARGET)
+TARGET=		${MACHINE}
+.endif
+.if !defined(TARGET_ARCH) || empty(TARGET_ARCH)
 .if ${TARGET} == ${MACHINE}
-TARGET_ARCH?=	${MACHINE_ARCH}
+TARGET_ARCH=	${MACHINE_ARCH}
 .else
-TARGET_ARCH?=	${TARGET}
+TARGET_ARCH=	${TARGET}
+.endif
 .endif
 IMAKE=		${MAKE} TARGET_ARCH=${TARGET_ARCH} TARGET=${TARGET}
-DISTDIR=	/usr/rel/dist
-OUTPUT=		/usr/rel
+DISTDIR=	dist
 
+# Define OSRELEASE by using newvars.sh
+.if !defined(OSRELEASE) || empty(OSRELEASE)
+.for _V in TYPE BRANCH REVISION
+${_V}!=	eval $$(awk '/^${_V}=/{print}' ${.CURDIR}/../sys/conf/newvers.sh); echo $$${_V}
+.endfor
+.for _V in ${TARGET_ARCH}
+.if !empty(TARGET:M${_V})
+OSRELEASE=	${TYPE}-${REVISION}-${BRANCH}-${TARGET}
+VOLUME_LABEL=	${REVISION:C/[.-]/_/g}_${BRANCH:C/[.-]/_/g}_${TARGET}
+.else
+OSRELEASE=	${TYPE}-${REVISION}-${BRANCH}-${TARGET}-${TARGET_ARCH}
+VOLUME_LABEL=	${REVISION:C/[.-]/_/g}_${BRANCH:C/[.-]/_/g}_${TARGET_ARCH}
+.endif
+.endfor
+.endif
+
+NO_INSTALLEXTRAKERNELS=no
+
+.if !defined(VOLUME_LABEL) || empty(VOLUME_LABEL)
+VOLUME_LABEL=	MidnightBSD_Install
+.endif
+
+.if !exists(${DOCDIR})
+NODOC= true
+.endif
 .if !exists(${PORTSDIR})
 NOPORTS= true
 .endif
 
-EXTRA_PACKAGES= 
+EXTRA_PACKAGES=
 .if !defined(NOPORTS)
 EXTRA_PACKAGES+= mports.txz
 .endif
 .if !defined(NOSRC)
 EXTRA_PACKAGES+= src.txz
 .endif
+.if !defined(NODOC)
+EXTRA_PACKAGES+= reldoc
+.endif
 
 RELEASE_TARGETS= ftp
+IMAGES=
 .if exists(${.CURDIR}/${TARGET}/mkisoimages.sh)
 RELEASE_TARGETS+= cdrom
+IMAGES+=	disc1.iso bootonly.iso
+. if defined(WITH_DVD) && !empty(WITH_DVD)
+RELEASE_TARGETS+= dvdrom
+IMAGES+=	dvd1.iso
+. endif
 .endif
 .if exists(${.CURDIR}/${TARGET}/make-memstick.sh)
-RELEASE_TARGETS+= memstick
+RELEASE_TARGETS+= memstick.img
+RELEASE_TARGETS+= mini-memstick.img
+IMAGES+=	memstick.img
+IMAGES+=	mini-memstick.img
+.endif
+.if exists(${.CURDIR}/${TARGET}/make-uefi-memstick.sh)
+RELEASE_TARGETS+=uefi-memstick.img
+RELEASE_TARGETS+=uefi-mini-memstick.img
+IMAGES+=	uefi-memstick.img
+IMAGES+=	uefi-mini-memstick.img
+.endif
+.if exists(${.CURDIR}/${TARGET}/mkisoimages-uefi.sh)
+RELEASE_TARGETS+=uefi-disc1.iso
+RELEASE_TARGETS+=uefi-bootonly.iso
+IMAGES+=	uefi-disc1.iso
+IMAGES+=	uefi-bootonly.iso
+. if defined(WITH_DVD) && !empty(WITH_DVD)
+RELEASE_TARGETS+=uefi-dvd1.iso
+IMAGES+=	uefi-dvd1.iso
+. endif
 .endif
 
+CLEANFILES=	packagesystem *.txz MANIFEST release ${IMAGES}
+.if defined(WITH_COMPRESSED_IMAGES) && !empty(WITH_COMPRESSED_IMAGES)
+. for I in ${IMAGES}
+CLEANFILES+=	${I}.xz
+. endfor
+.endif
+.if defined(WITH_DVD) && !empty(WITH_DVD)
+CLEANFILES+=	pkg-stage
+.endif
+CLEANDIRS=	dist ftp disc1 bootonly dvd
+.if !defined(NODOC)
+CLEANDIRS+=    reldoc rdoc
+.endif
+beforeclean:
+	chflags -R noschg .
 .include <bsd.obj.mk>
+clean: beforeclean
 
 base.txz:
-	-mkdir -p ${DISTDIR}
-	cd ${WORLDDIR} && ${IMAKE} distributeworld DISTDIR=${DISTDIR}
+	mkdir -p ${DISTDIR}
+	cd ${WORLDDIR} && ${IMAKE} distributeworld DISTDIR=${.OBJDIR}/${DISTDIR}
 # Set up mergemaster root database
 	sh ${.CURDIR}/scripts/mm-mtree.sh -m ${WORLDDIR} -F \
-	    "TARGET_ARCH=${TARGET_ARCH} TARGET=${TARGET}" -D "${DISTDIR}/base"
+	    "TARGET_ARCH=${TARGET_ARCH} TARGET=${TARGET}" -D "${.OBJDIR}/${DISTDIR}/base"
+	etcupdate extract -B -M "TARGET_ARCH=${TARGET_ARCH} TARGET=${TARGET}" \
+	    -s ${WORLDDIR} -d "${.OBJDIR}/${DISTDIR}/base/var/db/etcupdate"
 # Package all components
-	cd ${WORLDDIR} && ${IMAKE} packageworld DISTDIR=${DISTDIR}
-	mv ${DISTDIR}/*.txz ${OUTPUT}
+	cd ${WORLDDIR} && ${IMAKE} packageworld DISTDIR=${.OBJDIR}/${DISTDIR}
+	mv ${DISTDIR}/*.txz .
 
 kernel.txz:
-	-mkdir -p ${DISTDIR}
-	cd ${WORLDDIR} && ${IMAKE} distributekernel packagekernel DISTDIR=${DISTDIR}
-	mv ${DISTDIR}/kernel.txz ${OUTPUT}
+	mkdir -p ${DISTDIR}
+	cd ${WORLDDIR} && ${IMAKE} distributekernel packagekernel DISTDIR=${.OBJDIR}/${DISTDIR}
+	mv ${DISTDIR}/kernel*.txz .
 
 src.txz:
-	echo "src.txz"
-	-unlink ${DISTDIR}/usr/src
-	-mkdir -p ${DISTDIR}/usr
+	mkdir -p ${DISTDIR}/usr
 	ln -fs ${WORLDDIR} ${DISTDIR}/usr/src
-	cd ${DISTDIR} && tar cLvJf ${OUTPUT}/src.txz --exclude .svn \
-   	    --exclude .zfs --exclude @ --exclude usr/src/release/dist \
-	    --exclude "release/*.txz" --exclude CVS usr/src
+	cd ${DISTDIR} && tar cLvf - --exclude .svn --exclude .zfs \
+	    --exclude .git --exclude @ --exclude usr/src/release/dist usr/src | \
+	    ${XZ_CMD} > ${.OBJDIR}/src.txz
 
 mports.txz:
-	echo "mports.txz"
-	-unlink ${DISTDIR}/usr/mports
-	-mkdir -p ${DISTDIR}/usr
+	mkdir -p ${DISTDIR}/usr
 	ln -fs ${PORTSDIR} ${DISTDIR}/usr/mports
-	cd ${DISTDIR} && tar cLvJf ${OUTPUT}/mports.txz \
-	    --exclude usr/mports/Distfiles --exclude usr/mports/Packages \
-	    --exclude 'usr/mports/INDEX*' --exclude work \
-	    --exclude CVS usr/mports
+	cd ${DISTDIR} && tar cLvf - \
+	    --exclude .git --exclude .svn \
+	    --exclude usr/mports/Distfiles --exclude usr/mports/packages \
+	    --exclude 'usr/mports/INDEX*' --exclude work usr/mports | \
+	    ${XZ_CMD} > ${.OBJDIR}/mports.txz
 
-system: packagesystem
+reldoc:
+	cd ${.CURDIR}/doc && ${MAKE} all install clean 'FORMATS=html txt' \
+	    INSTALL_COMPRESSED='' URLS_ABSOLUTE=YES DOCDIR=${.OBJDIR}/rdoc
+	mkdir -p reldoc
+.for i in hardware readme relnotes errata
+	ln -f rdoc/${RELNOTES_LANG}/${i}/article.txt reldoc/${i:tu}.TXT
+	ln -f rdoc/${RELNOTES_LANG}/${i}/article.html reldoc/${i:tu}.HTM
+.endfor
+	cp rdoc/${RELNOTES_LANG}/readme/docbook.css reldoc
+
+disc1: packagesystem
 # Install system
-	-mkdir ${OUTPUT}/release
+	mkdir -p ${.TARGET}
 	cd ${WORLDDIR} && ${IMAKE} installkernel installworld distribution \
-	    DESTDIR=${OUTPUT}/release WITHOUT_RESCUE=1 WITHOUT_KERNEL_SYMBOLS=1
+	    DESTDIR=${.OBJDIR}/${.TARGET} WITHOUT_AMD=1 WITHOUT_AT=1 \
+	    WITHOUT_INSTALLLIB=1 WITHOUT_LIB32=1 WITHOUT_MAIL=1 \
+	    WITHOUT_NCP=1 WITHOUT_TOOLCHAIN=1 WITHOUT_PROFILE=1 \
+	    WITHOUT_RESCUE=1 WITHOUT_DICT=1 \
+	    WITHOUT_KERNEL_SYMBOLS=1
 # Copy distfiles
-	-mkdir ${OUTPUT}/release/usr/midnightbsd-dist
-	cp ${OUTPUT}/*.txz ${OUTPUT}/MANIFEST \
-	    ${OUTPUT}/release/usr/midnightbsd-dist
+	mkdir -p ${.TARGET}/usr/midnightbsd-dist
+	cp *.txz MANIFEST ${.TARGET}/usr/midnightbsd-dist
+# Copy documentation, if generated
+.if !defined(NODOC)
+	cp reldoc/* ${.TARGET}
+.endif
 # Set up installation environment
-	ln -fs /tmp/bsdinstall_etc/resolv.conf ${OUTPUT}/release/etc/resolv.conf
-	echo sendmail_enable=\"NONE\" > ${OUTPUT}/release/etc/rc.conf
-	echo hostid_enable=\"NO\" >> ${OUTPUT}/release/etc/rc.conf
-	cp ${.CURDIR}/rc.local ${OUTPUT}/release/etc
-	cp ${.CURDIR}/fstab ${OUTPUT}/release/etc
-	rm ${OUTPUT}/release/etc/rc.d/firstboot
-	touch ${OUTPUT}/${.TARGET}
+	ln -fs /tmp/bsdinstall_etc/resolv.conf ${.TARGET}/etc/resolv.conf
+	echo sendmail_enable=\"NONE\" > ${.TARGET}/etc/rc.conf
+	echo hostid_enable=\"NO\" >> ${.TARGET}/etc/rc.conf
+	echo vfs.mountroot.timeout=\"10\" >> ${.TARGET}/boot/loader.conf
+	cp ${.CURDIR}/rc.local ${.TARGET}/etc
+	touch ${.TARGET}
 
 bootonly: packagesystem
 # Install system
-	mkdir ${OUTPUT}/bootonly
+	mkdir -p ${.TARGET}
 	cd ${WORLDDIR} && ${IMAKE} installkernel installworld distribution \
-	    DESTDIR=${OUTPUT}/bootonly WITHOUT_AMD=1 WITHOUT_AT=1 \
-	    WITHOUT_BIND_DNSSEC=1 WITHOUT_BIND_ETC=1 WITHOUT_BIND_MTREE=1 \
-	    WITHOUT_BIND_NAMED=1 WITHOUT_GAMES=1 WITHOUT_GROFF=1 \
+	    DESTDIR=${.OBJDIR}/${.TARGET} WITHOUT_AMD=1 WITHOUT_AT=1 \
+	    WITHOUT_GAMES=1 WITHOUT_GROFF=1 \
 	    WITHOUT_INSTALLLIB=1 WITHOUT_LIB32=1 WITHOUT_MAIL=1 \
 	    WITHOUT_NCP=1 WITHOUT_TOOLCHAIN=1 WITHOUT_PROFILE=1 \
-	    WITHOUT_INSTALLIB=1 WITHOUT_RESCUE=1 WITHOUT_DICT=1 \
+	    WITHOUT_RESCUE=1 WITHOUT_DICT=1 \
 	    WITHOUT_KERNEL_SYMBOLS=1
 # Copy manifest only (no distfiles) to get checksums
-	-mkdir ${OUTPUT}/bootonly/usr/midnightbsd-dist
-	cp ${OUTPUT}/MANIFEST ${OUTPUT}/bootonly/usr/midnightbsd-dist
+	mkdir -p ${.TARGET}/usr/midnightbsd-dist
+	cp MANIFEST ${.TARGET}/usr/midnightbsd-dist
+# Copy documentation, if generated
+.if !defined(NODOC)
+	cp reldoc/* ${.TARGET}
+.endif
 # Set up installation environment
-	ln -fs /tmp/bsdinstall_etc/resolv.conf ${OUTPUT}/bootonly/etc/resolv.conf
-	echo sendmail_enable=\"NONE\" > ${OUTPUT}/bootonly/etc/rc.conf
-	echo hostid_enable=\"NO\" >> ${OUTPUT}/bootonly/etc/rc.conf
-	cp ${.CURDIR}/rc.local ${OUTPUT}/bootonly/etc
-	cp ${.CURDIR}/fstab ${OUTPUT}/bootonly/etc
-	rm ${OUTPUT}/bootonly/etc/rc.d/firstboot
+	ln -fs /tmp/bsdinstall_etc/resolv.conf ${.TARGET}/etc/resolv.conf
+	echo sendmail_enable=\"NONE\" > ${.TARGET}/etc/rc.conf
+	echo hostid_enable=\"NO\" >> ${.TARGET}/etc/rc.conf
+	echo vfs.mountroot.timeout=\"10\" >> ${.TARGET}/boot/loader.conf
+	cp ${.CURDIR}/rc.local ${.TARGET}/etc
 
-MidnightBSD-release.iso: system
-	sh ${.CURDIR}/${TARGET}/mkisoimages.sh -b MidnightBSD_Install ${OUTPUT}/MidnightBSD-release.iso ${OUTPUT}/release
-
-MidnightBSD-bootonly.iso: bootonly
-	sh ${.CURDIR}/${TARGET}/mkisoimages.sh -b MidnightBSD_Install ${OUTPUT}/MidnightBSD-bootonly.iso ${OUTPUT}/bootonly
-
-memstick: system
-	sh ${.CURDIR}/${TARGET}/make-memstick.sh ${OUTPUT}/release ${OUTPUT}/memstick
-
-packagesystem: base.txz kernel.txz ${EXTRA_PACKAGES}
-	sh ${.CURDIR}/scripts/make-manifest.sh ${OUTPUT}/*.txz > ${OUTPUT}/MANIFEST
+dvd: packagesystem
+# Install system
+	mkdir -p ${.TARGET}
+	cd ${WORLDDIR} && ${IMAKE} installkernel installworld distribution \
+		DESTDIR=${.OBJDIR}/${.TARGET} WITHOUT_RESCUE=1 WITHOUT_KERNEL_SYMBOLS=1
+# Copy distfiles
+	mkdir -p ${.TARGET}/usr/midnightbsd-dist
+	cp *.txz MANIFEST ${.TARGET}/usr/midnightbsd-dist
+# Copy documentation, if generated
+.if !defined(NODOC)
+	cp reldoc/* ${.TARGET}
+.endif
+# Set up installation environment
+	ln -fs /tmp/bsdinstall_etc/resolv.conf ${.TARGET}/etc/resolv.conf
+	echo sendmail_enable=\"NONE\" > ${.TARGET}/etc/rc.conf
+	echo hostid_enable=\"NO\" >> ${.TARGET}/etc/rc.conf
+	echo vfs.mountroot.timeout=\"10\" >> ${.TARGET}/boot/loader.conf
+	cp ${.CURDIR}/rc.local ${.TARGET}/etc
 	touch ${.TARGET}
 
-cdrom: MidnightBSD-release.iso MidnightBSD-bootonly.iso
-ftp: packagesystem
-	rm -rf ${OUTPUT}/ftp
-	mkdir ${OUTPUT}/ftp
-	cp ${OUTPUT}/*.txz ${OUTPUT}/MANIFEST ${OUTPUT}/ftp
+release.iso: disc1.iso
+disc1.iso: disc1
+	sh ${.CURDIR}/${TARGET}/mkisoimages.sh -b ${VOLUME_LABEL}_CD ${.TARGET} disc1 ${XTRADIR}
 
-release:
+uefi-disc1.iso: disc1
+.if exists(${.CURDIR}/${TARGET}/mkisoimages-uefi.sh)
+	sh ${.CURDIR}/${TARGET}/mkisoimages-uefi.sh -b ${VOLUME_LABEL}_UEFICD \
+		${.TARGET} disc1
+.endif
+
+uefi-bootonly.iso: bootonly
+.if exists(${.CURDIR}/${TARGET}/mkisoimages-uefi.sh)
+	sh ${.CURDIR}/${TARGET}/mkisoimages-uefi.sh -b ${VOLUME_LABEL}_UEFIBO \
+		${.TARGET} bootonly
+.endif
+
+dvd1.iso: dvd pkg-stage
+	sh ${.CURDIR}/${TARGET}/mkisoimages.sh -b ${VOLUME_LABEL}_DVD ${.TARGET} dvd ${XTRADIR}
+
+uefi-dvd1.iso: dvd pkg-stage
+.if exists(${.CURDIR}/${TARGET}/mkisoimages-uefi.sh)
+	sh ${.CURDIR}/${TARGET}/mkisoimages-uefi.sh -b ${VOLUME_LABEL}_UEFIDVD \
+		${.TARGET} dvd
+.endif
+
+bootonly.iso: bootonly
+	sh ${.CURDIR}/${TARGET}/mkisoimages.sh -b ${VOLUME_LABEL}_BO ${.TARGET} bootonly ${XTRADIR}
+
+memstick: memstick.img
+memstick.img: disc1
+	sh ${.CURDIR}/${TARGET}/make-memstick.sh disc1 ${.TARGET}
+
+mini-memstick: mini-memstick.img
+mini-memstick.img: bootonly
+	sh ${.CURDIR}/${TARGET}/make-memstick.sh bootonly ${.TARGET}
+
+uefi-memstick: uefi-memstick.img
+uefi-memstick.img: disc1
+.if exists(${.CURDIR}/${TARGET}/make-uefi-memstick.sh)
+	sh ${.CURDIR}/${TARGET}/make-uefi-memstick.sh disc1 ${.TARGET}
+.endif
+
+uefi-mini-memstick: uefi-mini-memstick.img
+uefi-mini-memstick.img: bootonly
+.if exists(${.CURDIR}/${TARGET}/make-uefi-memstick.sh)
+	sh ${.CURDIR}/${TARGET}/make-uefi-memstick.sh bootonly ${.TARGET}
+.endif
+
+packagesystem: base.txz kernel.txz ${EXTRA_PACKAGES}
+	sh ${.CURDIR}/scripts/make-manifest.sh *.txz > MANIFEST
+	touch ${.TARGET}
+
+pkg-stage:
+.if !defined(NOPKG) || empty(NOPKG)
+	env PORTSDIR=${PORTSDIR} REPOS_DIR=${.CURDIR}/pkg_repos/ \
+		sh ${.CURDIR}/scripts/pkg-stage.sh
+	mkdir -p ${.OBJDIR}/dvd/packages/repos/
+	cp ${.CURDIR}/scripts/MidnightBSD_install_cdrom.conf \
+		${.OBJDIR}/dvd/packages/repos/
+.endif
+	touch ${.TARGET}
+
+cdrom: disc1.iso bootonly.iso
+dvdrom: dvd1.iso
+ftp: packagesystem
+	rm -rf ftp
+	mkdir -p ftp
+	cp *.txz MANIFEST ftp
+
+release:	real-release vm-release cloudware-release
+	${MAKE} -C ${.CURDIR} ${.MAKEFLAGS} release-done
+	true
+
+release-done:
+	touch release
+
+real-release:
 	${MAKE} -C ${.CURDIR} ${.MAKEFLAGS} obj
 	${MAKE} -C ${.CURDIR} ${.MAKEFLAGS} ${RELEASE_TARGETS}
 
-clean:
-	chflags -R noschg ${OUTPUT} ${DISTDIR}
-	rm -rf ${OUTPUT}/dist ${OUTPUT}/ftp
-	rm -rf ${DISTDIR}
-	rm -f packagesystem
-	rm -f ${OUTPUT}/*.txz ${OUTPUT}/MANIFEST
-	rm -f system
-	rm -rf ${OUTPUT}/release ${OUTPUT}/bootonly
-	rm -f MidnightBSD-release.iso MidnightBSD-bootonly.iso memstick
+install:	release-install vm-install cloudware-install
 
-install:
-	-mkdir ${DESTDIR}
-	cp -a *.iso memstick ftp ${DESTDIR}/
+release-install:
+.if defined(DESTDIR) && !empty(DESTDIR)
+	mkdir -p ${DESTDIR}
+.endif
+	cp -a ftp ${DESTDIR}/
+.for I in ${IMAGES}
+	cp -p ${I} ${DESTDIR}/${OSRELEASE}-${I}
+. if defined(WITH_COMPRESSED_IMAGES) && !empty(WITH_COMPRESSED_IMAGES)
+	${XZ_CMD} -k ${DESTDIR}/${OSRELEASE}-${I}
+. endif
+.endfor
+	cd ${DESTDIR} && sha512 ${OSRELEASE}* > ${DESTDIR}/CHECKSUM.SHA512
+	cd ${DESTDIR} && sha256 ${OSRELEASE}* > ${DESTDIR}/CHECKSUM.SHA256
 
+.include "${.CURDIR}/Makefile.vm"
