--- a/.gitattributes
+++ b/.gitattributes
@@ -54700,6 +54700,12 @@ nrelease/root/etc/resolv.conf -text
 nrelease/root/index.html -text
 nrelease/root/mbsd.ico -text
 release/Makefile -text
+release/Makefile.azure svneol=native#text/plain
+release/Makefile.ec2 svneol=native#text/plain
+release/Makefile.gce svneol=native#text/plain
+release/Makefile.mirrors svneol=native#text/plain
+release/Makefile.vagrant svneol=native#text/plain
+release/Makefile.vm svneol=native#text/plain
 release/amd64/amd64.conf svneol=native#text/plain
 release/amd64/make-memstick.sh -text
 release/amd64/make-uefi-memstick.sh svneol=native#text/plain
