--- a/.gitattributes
+++ b/.gitattributes
@@ -54716,6 +54716,9 @@ release/generate-release.sh -text
 release/i386/i386.conf svneol=native#text/plain
 release/i386/make-memstick.sh -text
 release/i386/mkisoimages.sh -text
+release/ia64/ia64.conf svneol=native#text/plain
+release/ia64/make-memstick.sh svneol=native#text/plain
+release/ia64/mkisoimages.sh svneol=native#text/plain
 release/picobsd/tinyware/simple_httpd/Makefile -text
 release/picobsd/tinyware/simple_httpd/README -text
 release/picobsd/tinyware/simple_httpd/simple_httpd.c -text
