--- a/.gitattributes
+++ b/.gitattributes
@@ -74611,8 +74611,19 @@ tools/tools/vimage/vimage.c svneol=native#text/plain
 tools/tools/vop_table/README -text
 tools/tools/vop_table/vop_table.pl -text
 tools/tools/vop_table/vop_table.tcl -text
+tools/tools/vxge/Makefile svneol=native#text/plain
+tools/tools/vxge/vxge_cmn.h svneol=native#text/plain
+tools/tools/vxge/vxge_info.c svneol=native#text/plain
+tools/tools/vxge/vxge_info.h svneol=native#text/plain
+tools/tools/vxge/vxge_log.c svneol=native#text/plain
+tools/tools/vxge/vxge_log.h svneol=native#text/plain
 tools/tools/whereintheworld/Makefile -text
 tools/tools/whereintheworld/whereintheworld.pl -text
+tools/tools/wtap/Makefile svneol=native#text/plain
+tools/tools/wtap/vis_map/Makefile svneol=native#text/plain
+tools/tools/wtap/vis_map/vis_map.c svneol=native#text/plain
+tools/tools/wtap/wtap/Makefile svneol=native#text/plain
+tools/tools/wtap/wtap/wtap.c svneol=native#text/plain
 tools/tools/zfsboottest/Makefile svneol=native#text/plain
 tools/tools/zfsboottest/zfsboottest.c svneol=native#text/plain
 tools/tools/zfsboottest/zfsboottest.sh svneol=native#text/plain
