--- a/games/Makefile
+++ b/games/Makefile
@@ -1,6 +1,7 @@
 #	@(#)Makefile	8.2 (Berkeley) 3/31/94
-# $FreeBSD: src/games/Makefile,v 1.20 2002/10/20 11:18:56 markm Exp $
-# $MidnightBSD: src/games/Makefile,v 1.18 2009/04/12 01:39:37 laffer1 Exp $
+# $MidnightBSD$
+
+.include <bsd.own.mk>
 
 SUBDIR= \
 	arithmetic \
@@ -33,6 +34,11 @@ SUBDIR= \
 	wargames \
 	worm \
 	worms \
-	wump
+	wump \
+	${_tests}
+
+.if ${MK_TESTS} != "no"
+_tests=	tests
+.endif
 
 .include <bsd.subdir.mk>
