--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -435,6 +435,8 @@
             ..
         ..
         games
+            atc
+            ..
             fortune
             ..
             larn
