--- a/share/examples/kld/syscall/test/Makefile
+++ b/share/examples/kld/syscall/test/Makefile
@@ -1,8 +1,9 @@
-# Makefile for simple caller of syscall
 # $MidnightBSD$
+# Makefile for simple caller of syscall
+# $FreeBSD: stable/10/share/examples/kld/syscall/test/Makefile 276486 2014-12-31 23:25:37Z ngie $
 
 PROG=	call
-NO_MAN=
+MAN=
 WARNS?=	5
 
 .include <bsd.prog.mk>
