--- a/share/examples/etc/make.conf
+++ b/share/examples/etc/make.conf
@@ -1,5 +1,4 @@
-# $MidnightBSD: src/share/examples/etc/make.conf,v 1.6 2009/04/10 00:20:06 laffer1 Exp $
-# $FreeBSD: src/share/examples/etc/make.conf,v 1.265.2.5 2006/02/21 17:19:53 sam Exp $
+# $MidnightBSD$
 #
 # NOTE:  Please would any committer updating this file also update the
 # make.conf(5) manual page, if necessary, which is located in
@@ -26,22 +25,28 @@
 # The CPUTYPE variable controls which processor should be targeted for
 # generated code.  This controls processor-specific optimizations in
 # certain code (currently only OpenSSL) as well as modifying the value
-# of CFLAGS to contain the appropriate optimization directive to gcc.
+# of CFLAGS to contain the appropriate optimization directive to cc.
 # The automatic setting of CFLAGS may be overridden using the
 # NO_CPU_CFLAGS variable below.
 # Currently the following CPU types are recognized:
 #   Intel x86 architecture:
-#       (AMD CPUs)	opteron-sse3 opteron athlon64-sse3 athlon64 athlon-mp
-#			athlon-xp athlon-4 athlon-tbird athlon k8-sse3 k8
-#			geode k6-3 k6-2 k6 k5
-#       (Intel CPUs)	core2 core nocona pentium4m pentium4 prescott
-#			pentium3m pentium3 pentium-m pentium2
-#			pentiumpro pentium-mmx pentium i486 i386
-#       (Via CPUs)	c3 c3-2
-#   AMD64 architecture: opteron, athlon64, nocona, prescott, core2
-#   Intel ia64 architecture: itanium2, itanium
+#       (AMD CPUs)	amdfam10, opteron-sse3, athlon64-sse3, k8-sse3,
+#			opteron, athlon64, athlon-fx, k8, athlon-mp,
+#			athlon-xp, athlon-4, athlon-tbird, athlon, k7,
+#			geode, k6-3, k6-2, k6
+#       (Intel CPUs)	core2, core, nocona, pentium4m, pentium4, prescott,
+#			pentium3m, pentium3, pentium-m, pentium2,
+#			pentiumpro, pentium-mmx, pentium, i486
+#       (VIA CPUs)	c7, c3-2, c3
+#   AMD64 architecture:	amdfam10, opteron-sse3, athlon64-sse3, k8-sse3,
+#			opteron, athlon64, k8, core2, nocona
+#   Intel ia64 architecture:	itanium2, itanium
 #   SPARC-V9 architecture:	v9 (generic 64-bit V9), ultrasparc (default
 #				if omitted), ultrasparc3
+# Additionally the following CPU types are recognized by clang:
+#   Intel x86 architecture (for both amd64 and i386):
+#       (AMD CPUs)	bdver3, bdver2, bdver1, btver2, btver1
+#       (Intel CPUs)	slm, core-avx2, core-avx-i, corei7-avx, corei7, atom
 #
 # (?= allows to buildworld for a different CPUTYPE.)
 #
@@ -55,6 +60,12 @@
 # nonstandard optimization settings
 # before submitting bug reports without patches to the developers.
 #
+# CFLAGS.arch provides a mechanism for applying CFLAGS only when building 
+# the given architecture.  This is useful primarily on a system used for 
+# cross-building, when you have a set of flags to apply to the TARGET_ARCH 
+# being cross-built but don't want those settings applied to building the 
+# cross-tools or other components that run on the build host machine.  
+#
 # CXXFLAGS controls the compiler settings used when compiling C++ code.
 # Note that CXXFLAGS is initially set to the value of CFLAGS.  If you wish
 # to add to CXXFLAGS value, "+=" must be used rather than "=".  Using "="
@@ -66,6 +77,7 @@
 #
 # CFLAGS+=	-msse3
 # CXXFLAGS+=	-msse3
+# CFLAGS.armv6+= -mfloat-abi=softfp
 #
 # MAKE_SHELL controls the shell used internally by make(1) to process the
 # command scripts in makefiles.  Three shells are supported, sh, ksh, and
@@ -75,7 +87,7 @@
 #MAKE_SHELL?=sh
 #
 # BDECFLAGS are a set of gcc warning settings that Bruce Evans has suggested
-# for use in developing FreeBSD and testing changes.  They can be used by
+# for use in developing BSD and testing changes.  They can be used by
 # putting "CFLAGS+=${BDECFLAGS}" in /etc/make.conf.  -Wconversion is not
 # included here due to compiler bugs, e.g., mkdir()'s mode_t argument.
 #
@@ -91,10 +103,10 @@
 #
 #COPTFLAGS= -O -pipe
 #
-# Compare before install
+# Compare before install.
 #INSTALL+= -C
 #
-# Mtree will follow symlinks
+# Mtree will follow symlinks.
 #MTREE_FOLLOWS_SYMLINKS= -L
 #
 # To enable installing newgrp(1) with the setuid bit turned on.
@@ -114,7 +126,7 @@
 #
 #TRACEROUTE_NO_IPSEC= 	# do not build traceroute(8) with IPSEC support
 #
-# To build sys/modules when building the world (our old way of doing things)
+# To build sys/modules when building the world (our old way of doing things).
 #MODULES_WITH_WORLD=	# do not build modules when building kernel
 #
 # The list of modules to build instead of all of them.
@@ -130,7 +142,7 @@
 #
 #
 # Default format for system documentation, depends on your printer.
-# Set this to "ascii" for simple printers or screen
+# Set this to "ascii" for simple printers or screen.
 #
 #PRINTERDEVICE=	ps
 #
@@ -173,24 +185,6 @@
 #ENABLE_SUID_K5SU=
 #
 #
-# CVSup update flags.  Edit SUPFILE settings to reflect whichever distribution
-# file(s) you use on your site (see /usr/share/examples/cvsup/README for more
-# information on CVSup and these files).  To use, do "make update" in /usr/src.
-#
-#SUP_UPDATE=
-#
-#SUP=            /usr/bin/csup
-#SUPFLAGS=       -g -L 2
-#SUPHOST=        stargazer.MidnightBSD.org
-#SUPFILE=        /usr/share/examples/cvsup/standard-supfile
-#PORTSSUPFILE=   /usr/share/examples/cvsup/mports-supfile
-#
-#
-# mports developers may want to use mport maintainer mode to
-# catch problems with plists
-#
-#MPORT_MAINTAINER_MODE=yes
-#
 # top(1) uses a hash table for the user names.  The size of this hash
 # can be tuned to match the number of local users.  The table size should
 # be a prime number approximately twice as large as the number of lines in
@@ -200,7 +194,7 @@
 #
 # Documentation
 #
-# The list of languages and encodings to build and install
+# The list of languages and encodings to build and install.
 #
 #DOC_LANG=	en_US.ISO8859-1 ru_RU.KOI8-R
 #
@@ -283,3 +277,7 @@
 #WITH_DEBUG=YES
 #.endif
 #
+# mports developers may want to use mport maintainer mode to
+# catch problems with plists
+#
+#MPORT_MAINTAINER_MODE=yes
