--- a/games/random/Makefile
+++ b/games/random/Makefile
@@ -1,10 +1,9 @@
-#	@(#)Makefile	8.1 (Berkeley) 3/31/94
-# $FreeBSD: src/games/random/Makefile,v 1.5 2003/02/15 10:26:10 seanc Exp $
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 3/31/94
+# $FreeBSD: stable/10/games/random/Makefile 203923 2010-02-15 14:32:00Z uqs $
 
 PROG=	random
 MAN=	random.6
 SRCS=	random.c randomize_fd.c
-WARNS?=	5
 
 .include <bsd.prog.mk>
