--- a/games/primes/Makefile
+++ b/games/primes/Makefile
@@ -1,10 +1,10 @@
-#	@(#)Makefile	8.1 (Berkeley) 5/31/93
-# $FreeBSD: src/games/primes/Makefile,v 1.3 2004/12/21 08:46:57 ru Exp $
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 5/31/93
+# $FreeBSD: stable/10/games/primes/Makefile 276486 2014-12-31 23:25:37Z ngie $
 
 PROG=	primes
 SRCS=	pattern.c pr_tbl.c primes.c
-NO_MAN=
+MAN=
 DPADD=	${LIBM}
 LDADD=	-lm
 
