--- a/games/ppt/Makefile
+++ b/games/ppt/Makefile
@@ -1,11 +1,9 @@
-#	@(#)Makefile	8.1 (Berkeley) 5/31/93
-# $FreeBSD: src/games/ppt/Makefile,v 1.5 2004/12/21 08:46:57 ru Exp $
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 5/31/93
+# $FreeBSD: stable/10/games/ppt/Makefile 276486 2014-12-31 23:25:37Z ngie $
 
 PROG=	ppt
-NO_MAN=
-
-WARNS?=	6
+MAN=
 
 .include <bsd.prog.mk>
 
