--- a/games/number/Makefile
+++ b/games/number/Makefile
@@ -1,6 +1,6 @@
-#	@(#)Makefile	8.1 (Berkeley) 5/31/93
-# $FreeBSD: src/games/number/Makefile,v 1.4 2001/03/26 14:20:58 ru Exp $
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 5/31/93
+# $FreeBSD: stable/10/games/number/Makefile 203923 2010-02-15 14:32:00Z uqs $
 
 PROG=	number
 MAN=	number.6
