--- a/games/morse/Makefile
+++ b/games/morse/Makefile
@@ -1,12 +1,8 @@
-#	@(#)Makefile	8.1 (Berkeley) 5/31/93
-# $FreeBSD: src/games/morse/Makefile,v 1.7.14.1 2005/11/16 10:50:10 ru Exp $
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 5/31/93
+# $FreeBSD: stable/10/games/morse/Makefile 203479 2010-02-04 07:08:06Z imp $
 
 PROG=	morse
 MAN=	morse.6
-
-.if ${MACHINE_ARCH} == "i386" || ${MACHINE_ARCH} == "amd64"
-CFLAGS += -DSPEAKER=\"/dev/speaker\"
-.endif
 
 .include <bsd.prog.mk>
