--- a/games/bcd/Makefile
+++ b/games/bcd/Makefile
@@ -1,9 +1,8 @@
-#	@(#)Makefile	8.1 (Berkeley) 5/31/93
-# $FreeBSD: src/games/bcd/Makefile,v 1.6 2004/07/11 17:26:18 stefanf Exp $
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 5/31/93
+# $FreeBSD: stable/10/games/bcd/Makefile 203923 2010-02-15 14:32:00Z uqs $
 
 PROG=	bcd
-WARNS?=	6
 MAN=	bcd.6
 MLINKS=	bcd.6 ppt.6
 
