--- a/games/caesar/Makefile
+++ b/games/caesar/Makefile
@@ -1,6 +1,6 @@
-#	@(#)Makefile	8.1 (Berkeley) 5/31/93
-# $FreeBSD: src/games/caesar/Makefile,v 1.10 2005/05/01 19:34:22 stefanf Exp $
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 5/31/93
+# $FreeBSD: stable/10/games/caesar/Makefile 203923 2010-02-15 14:32:00Z uqs $
 
 PROG=	caesar
 DPADD=	${LIBM}
@@ -8,7 +8,5 @@ LDADD=	-lm
 SCRIPTS=rot13.sh
 MAN=	caesar.6
 MLINKS=	caesar.6 rot13.6
-
-WARNS?=	6
 
 .include <bsd.prog.mk>
