--- a/.gitattributes
+++ b/.gitattributes
@@ -48277,6 +48277,7 @@ games/fortune/datfiles/gerrold.limerick -text
 games/fortune/datfiles/limerick -text
 games/fortune/datfiles/murphy -text
 games/fortune/datfiles/murphy-o -text
+games/fortune/datfiles/murphy.sp.ok -text
 games/fortune/datfiles/startrek -text
 games/fortune/datfiles/startrek.sp.ok -text
 games/fortune/datfiles/zippy -text
