--- a/.gitattributes
+++ b/.gitattributes
@@ -48275,6 +48275,7 @@ games/fortune/datfiles/fortunes.sp.ok -text
 games/fortune/datfiles/fortunes2-o -text
 games/fortune/datfiles/gerrold.limerick -text
 games/fortune/datfiles/limerick -text
+games/fortune/datfiles/limerick.sp.ok -text
 games/fortune/datfiles/murphy -text
 games/fortune/datfiles/murphy-o -text
 games/fortune/datfiles/murphy.sp.ok -text
