--- a/games/fortune/datfiles/Makefile
+++ b/games/fortune/datfiles/Makefile
@@ -1,43 +1,22 @@
 #	@(#)Makefile	8.2 (Berkeley) 4/19/94
-# $FreeBSD: src/games/fortune/datfiles/Makefile,v 1.33 2005/02/03 00:20:36 ru Exp $
-# $MidnightBSD: src/games/fortune/datfiles/Makefile,v 1.3 2007/07/19 07:54:18 laffer1 Exp $
+# $MidnightBSD$
 
-FILES=	fortunes murphy startrek zippy
-BLDS=	fortunes.dat murphy.dat startrek.dat zippy.dat \
-	fortunes-o fortunes-o.dat
-
-# Pass all new entries by ${MAINTAINER} to preserve some semblance of
-# humor in the fortune files.  What's funny to you on 6 beers may not
-# be funny to anyone else.
-MAINTAINER=	laffer1
+DB=	fortunes murphy startrek zippy
 
 # TO AVOID INSTALLING THE POTENTIALLY OFFENSIVE FORTUNES, COMMENT OUT THE
-# THREE LINES AND UNCOMMENT THE FOURTH LINE.
+# NEXT LINE.
+DB+=	limerick murphy-o gerrold.limerick
 
-# THE THREE LINES:
-FILES+=	fortunes2-o limerick murphy-o gerrold.limerick
-BLDS+=	fortunes2-o.dat limerick.dat murphy-o.dat gerrold.limerick.dat
-TYPE=	real
-
-# THE FOURTH LINE:
-#TYPE=	fake
-
-FILES+=	${BLDS}
+BLDS=	${DB:S/$/.dat/}
+FILES=	${DB} ${BLDS}
 CLEANFILES+=${BLDS}
 
 FILESDIR=	${SHAREDIR}/games/fortune
 
-.for f in fortunes fortunes2-o gerrold.limerick limerick murphy murphy-o startrek zippy
+.for f in ${DB}
 $f.dat: $f
 	PATH=$$PATH:/usr/games:${.OBJDIR}/../strfile \
 	    strfile -Cs ${.ALLSRC} ${.TARGET}
 .endfor
-
-fortunes-o.dat: fortunes-o
-	PATH=$$PATH:/usr/games:${.OBJDIR}/../strfile \
- 	    strfile -Csx ${.ALLSRC} ${.TARGET}
-
-fortunes-o: fortunes-o.${TYPE}
-	LC_ALL=C tr a-zA-Z n-za-mN-ZA-M < ${.ALLSRC} > ${.TARGET}
 
 .include <bsd.prog.mk>
