--- a/share/doc/IPv6/Makefile
+++ b/share/doc/IPv6/Makefile
@@ -1,5 +1,5 @@
 # $MidnightBSD$
-# $FreeBSD: src/share/doc/IPv6/Makefile,v 1.4 2004/12/21 08:46:52 ru Exp $
+# $FreeBSD: stable/10/share/doc/IPv6/Makefile 139103 2004-12-21 08:47:35Z ru $
 
 NO_OBJ=
 FILES=		IMPLEMENTATION
