--- a/share/doc/legal/Makefile
+++ b/share/doc/legal/Makefile
@@ -1,8 +1,12 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/share/doc/legal/Makefile 291792 2015-12-04 18:14:31Z bdrewery $
 
 SUBDIR=	intel_ipw \
 	intel_iwi \
 	intel_iwn \
-	intel_wpi
+	intel_wpi \
+	realtek
+
+SUBDIR_PARALLEL=
 
 .include <bsd.subdir.mk>
