add jail support

--- a/usr.bin/cpuset/Makefile
+++ b/usr.bin/cpuset/Makefile
@@ -1,6 +1,9 @@
 # $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/cpuset/Makefile 201386 2010-01-02 10:27:05Z ed $
+# $FreeBSD: stable/10/usr.bin/cpuset/Makefile 336039 2018-07-06 19:10:07Z jamie $
 
 PROG=   cpuset
+
+DPADD=	${LIBJAIL}
+LDADD=	-ljail
 
 .include <bsd.prog.mk>
