--- a/tools/tools/netrate/Makefile.inc
+++ b/tools/tools/netrate/Makefile.inc
@@ -1,4 +1,5 @@
-# $FreeBSD: src/tools/tools/netrate/Makefile.inc,v 1.1 2004/12/21 12:14:33 keramida Exp $
+# $MidnightBSD$
+# $FreeBSD: stable/10/tools/tools/netrate/Makefile.inc 139121 2004-12-21 12:14:34Z keramida $
 
 WARNS?= 5
 WFORMAT?= 2
