--- a/.gitattributes
+++ b/.gitattributes
@@ -74290,12 +74290,18 @@ tools/tools/netmap/pkt-gen.c svneol=native#text/plain
 tools/tools/netrate/Makefile -text
 tools/tools/netrate/Makefile.inc -text
 tools/tools/netrate/README -text
+tools/tools/netrate/http/Makefile svneol=native#text/plain
+tools/tools/netrate/http/http.c svneol=native#text/plain
+tools/tools/netrate/httpd/Makefile svneol=native#text/plain
+tools/tools/netrate/httpd/httpd.c svneol=native#text/plain
 tools/tools/netrate/netblast/Makefile -text
 tools/tools/netrate/netblast/netblast.c -text
 tools/tools/netrate/netreceive/Makefile -text
 tools/tools/netrate/netreceive/netreceive.c -text
 tools/tools/netrate/netsend/Makefile -text
 tools/tools/netrate/netsend/netsend.c -text
+tools/tools/netrate/tcpreceive/Makefile svneol=native#text/plain
+tools/tools/netrate/tcpreceive/tcpreceive.c svneol=native#text/plain
 tools/tools/npe/Makefile svneol=native#text/plain
 tools/tools/npe/npestats/Makefile svneol=native#text/plain
 tools/tools/npe/npestats/main.c svneol=native#text/plain
