--- a/.gitattributes
+++ b/.gitattributes
@@ -72738,6 +72738,20 @@ tests/etc/rc.d/routing_test.sh svneol=native#text/plain
 tests/freebsd_test_suite/macros.h svneol=native#text/plain
 tests/sys/Makefile svneol=native#text/plain
 tests/sys/Makefile.inc svneol=native#text/plain
+tests/sys/acl/00.sh svneol=native#text/plain
+tests/sys/acl/01.sh svneol=native#text/plain
+tests/sys/acl/02.sh svneol=native#text/plain
+tests/sys/acl/03.sh svneol=native#text/plain
+tests/sys/acl/04.sh svneol=native#text/plain
+tests/sys/acl/Makefile svneol=native#text/plain
+tests/sys/acl/aclfuzzer.sh svneol=native#text/plain
+tests/sys/acl/mktrivial.sh svneol=native#text/plain
+tests/sys/acl/run -text
+tests/sys/acl/tools-crossfs.test -text
+tests/sys/acl/tools-nfs4-psarc.test -text
+tests/sys/acl/tools-nfs4-trivial.test -text
+tests/sys/acl/tools-nfs4.test -text
+tests/sys/acl/tools-posix.test -text
 tests/sys/posixshm/Makefile svneol=native#text/plain
 tests/sys/posixshm/posixshm_test.c svneol=native#text/plain
 tests/sys/vfs/Makefile svneol=native#text/plain
