--- a/.gitattributes
+++ b/.gitattributes
@@ -72752,6 +72752,15 @@ tests/sys/acl/tools-nfs4-psarc.test -text
 tests/sys/acl/tools-nfs4-trivial.test -text
 tests/sys/acl/tools-nfs4.test -text
 tests/sys/acl/tools-posix.test -text
+tests/sys/mac/Makefile svneol=native#text/plain
+tests/sys/mac/bsdextended/Makefile svneol=native#text/plain
+tests/sys/mac/bsdextended/matches_test.sh svneol=native#text/plain
+tests/sys/mac/bsdextended/ugidfw_test.c svneol=native#text/plain
+tests/sys/mac/portacl/LICENSE -text
+tests/sys/mac/portacl/Makefile svneol=native#text/plain
+tests/sys/mac/portacl/misc.sh svneol=native#text/plain
+tests/sys/mac/portacl/nobody_test.sh svneol=native#text/plain
+tests/sys/mac/portacl/root_test.sh svneol=native#text/plain
 tests/sys/posixshm/Makefile svneol=native#text/plain
 tests/sys/posixshm/posixshm_test.c svneol=native#text/plain
 tests/sys/vfs/Makefile svneol=native#text/plain
